# dnd_text_game

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  ROADMAP_MILESTONES.md  TODO.md  list_dirs_and_files.bat  list_dirs_and_files.ps1  list_dirs_and_files.txt  pyproject.toml  run-game.bat  start-game.bat  temp_chargen.py
.clinerules/: GEMINI.md
.github/workflows/: content-validate.yml
docs/: D&D 3.5e Effects and State Specification.txt  D&D 3.5e Text RPG Game Spec.txt  implementation_checklist.md
docs/schemas/: CampaignDefinition.yaml  ConditionDefinition.schema.json  EffectDefinition.schema.json  ResourceDefinition.schema.json  StartingKit.yaml  TaskDefinition.schema.json  ZoneDefinition.schema.json
packaging/: dndrpg.spec
scripts/: build-onefile.bat
src/dndrpg/: __main__.py  app.py  cli.py  main.py
src/dndrpg/content/campaigns/: srd_sandbox.yaml
src/dndrpg/content/conditions/: prone.yaml  stunned.yaml
src/dndrpg/engine/: campaigns.py  chargen.py  chargen_helpers.py  conditions_runtime.py  damage_runtime.py  dice.py  effects_runtime.py  engine.py  expr.py  gates_runtime.py  loader.py  models.py  modifiers_runtime.py  prereq.py  resources_runtime.py  rulehooks_runtime.py  save.py  scheduler.py  schema_models.py  settings.py  skills.py  spells.py  state.py  target_paths.py  targetpaths_registry.py  trace.py  wealth.py  zones_runtime.py
src/dndrpg/tools/: export_schemas.py  validate.py
src/dndrpg/ui/: chargen.py  ids.py  panels.py  screens.py
src/dndrpg/util/: paths.py
tests/: test_resources.py  test_schema_models.py  test_smoke.py
(+34 files in other folders)
